# modern-cpp-project-template

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  LICENSE  README.md  codecov.yml
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  hello_world_benchmark.cpp
include/: hello_world.h
scripts/: README.md  benchmark.sh  build.sh  clean.sh  coverage-ci.sh  coverage.sh  docs.sh  run.sh  test.sh
src/: hello_world.cpp  main.cpp
tests/: CMakeLists.txt  hello_world_test.cpp
